@@ -208,7 +208,13 @@
   <team id="el">
     <_language id="el">Greek</_language>
     <coordinator id="simos"/>
+    <_description>Greek</_description>
     <webpage>http://www.gnome.gr/</webpage>
+    <mailing-list>team@lists.gnome.gr</mailing-list>
+    <mailing-list-subscribe>http://lists.gnome.gr/listinfo.cgi/team-gnome.gr</mailing-list-subscribe>
+    <bugzilla>http://bugzilla.gnome.org/</bugzilla>
+    <bugzilla-product>l10n</bugzilla-product>
+    <bugzilla-component>Greek [el]</bugzilla-component>
   </team>
   <team id="gn">
     <_language id="gn">Guarani</_language>
