@@ -1,5 +1,6 @@
 2007-07-25  Simos Xenitellis  <simos@gnome.org>
 
+	* translation-teams.xml.in: Updated fields for Greek team.
 	* pepople.xml.in: Added fields to "simos".
 
 2007-07-23  Claude Paroz <claude@2xlibre.net>
